--- a/scss/_masculino.scss
+++ b/scss/_masculino.scss
@@ -224,6 +224,7 @@ border: solid;
        grid-template-columns: 500px;
        grid-template-rows: auto;
        justify-content: center;
+       margin-bottom: 20px;
     }
     
 }
